style.css
/* Base Styles */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #ffffff;
}

/* Heading Styles */
h1 {
    font-size: 2.5rem;
    color: #333333;
    text-align: center;
    margin-bottom: 1rem;
}

h2 {
    font-size: 2rem;
    color: #333333;
    text-align: center;
    margin-bottom: 1rem;
}

h3 {
    font-size: 1.75rem;
    color: #333333;
    text-align: center;
    margin-bottom: 0.75rem;
}

h4 {
    font-size: 1.5rem;
    color: #333333;
    text-align: center;
    margin-bottom: 0.5rem;
}

/* Navigation Styles */
nav {
    background-color: #add9f3;
    padding: 1rem 0;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    gap: 2rem;
    color:#ffffff
}

/* Menu */
.Quarterly-menu h4
{
    font-weight:bold;
}

.Quarterly-menu p
{
 text-align: center;
}

/* Location*/
#location address
{
    text-align: center;
}

/* Dev Favorites*/
#Devfavorites p 
{
    text-align: center;
}

.resize-img  
{
    width: 500px;
}

.gallery
{
    display: flex;
    flex-wrap:wrap ;
    padding: 10px;
    justify-content: space-around;
}

.favorite-img
{
    height: 380px;
    width: 380px;
    justify-content: space-between;
}

/* Footer */
.social-icons
{
    justify-content: center, space-between;
    border-radius: 38%;
}

.resize-icon
{
    width: 50px;
    height: 40px;
    justify-content: center;
}

footer 
{
    margin: 0 auto;
    width: 500px;
}

/* Hours */
.day-time 
{
    text-align: center;
}
.day-time ul 
{
    display: inline-block;
}

